better plotting, latent walk and validation changes

--- a/notebook/training/cstvae/vae_training.ipynb
+++ b/notebook/training/cstvae/vae_training.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "52d19f81",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "from src.vae import CSTVariationalAutoencoder\n",
-    "from src.utils import plot_original_and_reconstruction\n",
+    "from src.plotting import plot_original_and_reconstruction\n",
     "from src.layers.airfoil_scaler import AirfoilScaler\n",
     "\n",
     "from src.airfoil import airfoil_modifications\n",
