--- a/notebook/validation/vae_validation.ipynb
+++ b/notebook/validation/vae_validation.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +248,7 @@
     "# 1. Run Inference (Reconstruction)\n",
     "print(\"Running Inference...\")\n",
     "# training=False removes stochastic noise for validation\n",
-    "_, pred_weights_norm, pred_params_norm = vae(input_normalized, training=False)\n",
+    "pred_weights_norm, pred_params_norm = vae(input_normalized, training=False)\n",
     "\n",
     "# 2. Denormalize Predictions\n",
     "pred_weights, pred_params = scaler.inverse_transform(\n",
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
     "\n",
     "dummy_latent_vector = tf.random.normal((BATCH_SIZE, LATENT_DIM))\n",
     "\n",
-    "_, w_norm, p_norm = vae.decoder(dummy_latent_vector)\n",
+    "w_norm, p_norm = vae.decoder(dummy_latent_vector)\n",
     "\n",
     "w_norm = tf.reshape(w_norm, [-1, 2 * NPV])\n",
     "\n",
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +724,7 @@
     "\n",
     "dummy_latent_vector = tf.random.normal((BATCH_SIZE, LATENT_DIM))\n",
     "\n",
-    "_, w_norm, p_norm = vae.decoder(dummy_latent_vector)\n",
+    "w_norm, p_norm = vae.decoder(dummy_latent_vector)\n",
     "\n",
     "w_norm = tf.reshape(w_norm, [-1, 2 * NPV])\n",
     "\n",
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2990,6 +2990,15 @@
    "source": [
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "print(\"Calculating 3D PCA...\")\n",
+    "pca_3d = PCA(n_components=3)\n",
+    "z_pca_3d = pca_3d.fit_transform(z_mean)\n",
+    "var_explicada_3d = np.sum(pca_3d.explained_variance_ratio_)\n",
+    "\n",
+    "print(\"Calculating 3D t-SNE (can take a while)...\")\n",
+    "tsne_3d = TSNE(n_components=3, perplexity=30, max_iter=1000, random_state=42)\n",
+    "z_tsne_3d = tsne_3d.fit_transform(z_mean)\n",
     "\n",
     "# ============================================================================\n",
     "# FIGURA 1: PCA 3D (Com correção de margens)\n",
